Changed hiding/showing canvases, added the option to color specific parts of the Edwards-Venn diagram differently, added coloring the parts not shown with only circles red on Edwards-Venn dieagram and did some refactoring

--- a/canvastest.html
+++ b/canvastest.html
@@ -32,14 +32,15 @@
                     <input type="radio" name="choice" value="1">
                 </label> Ainult Venni diagramm
                 <label>
-                    <input type="radio" name="choice" value="2">
+                    <input type="radio" name="choice" value="2" checked>
                 </label> Võrdle
             </div>
 
             <div id="input">
                 <label for="equation"></label><input id="equation" type="text">
+                <input id="color" type="text"> <!--Add label-->
                 <button onclick="draw()">Joonista</button>
-            </div>
+        </div>
 
             <div id="diagrams">
 
