--- a/canvastest.html
+++ b/canvastest.html
@@ -38,17 +38,16 @@
 
             <div id="input">
                 <label for="equation"></label><input id="equation" type="text">
-                <input id="color" type="text"> <!--Add label-->
+                <label for="color"></label><input id="color" type="text">
                 <button onclick="draw()">Joonista</button>
         </div>
 
             <div id="diagrams">
 
-                <canvas class="diagram" id="canvas4" width="600" height="300">
-                </canvas>
                 <canvas class="diagram" id="canvas" width="600" height="300">
                 </canvas>
-
+                <canvas class="diagram" id="canvas4" width="600" height="300">
+                </canvas>
 
                 <canvas class="diagram" id="canvas2" width="600" height="300">
                 </canvas>
