Restructured code and added highlighting functionality for all diagrams

--- a/canvastest.html
+++ b/canvastest.html
@@ -32,8 +32,11 @@
                     <input type="radio" name="choice" value="1">
                 </label> Ainult Venni diagramm
                 <label>
-                    <input type="radio" name="choice" value="2" checked>
+                    <input type="radio" name="choice" value="2">
                 </label> Võrdle
+                <label>
+                    <input type="radio" name="choice" value="3" checked>
+                </label> Kõik
             </div>
 
             <div id="input">
@@ -44,7 +47,7 @@
 
             <div id="diagrams">
 
-                <canvas class="diagram" id="canvas" width="600" height="300">
+                <canvas class="diagram" id="canvas1" width="600" height="300">
                 </canvas>
                 <canvas class="diagram" id="canvas4" width="600" height="300">
                 </canvas>
