Removed canvas size attributes from html file

--- a/canvastest.html
+++ b/canvastest.html
@@ -47,14 +47,14 @@
 
             <div id="diagrams">
 
-                <canvas class="diagram" id="canvas1" width="600" height="300">
+                <canvas class="diagram" id="canvas1">
                 </canvas>
-                <canvas class="diagram" id="canvas4" width="600" height="300">
+                <canvas class="diagram" id="canvas4">
                 </canvas>
 
-                <canvas class="diagram" id="canvas2" width="600" height="300">
+                <canvas class="diagram" id="canvas2">
                 </canvas>
-                <canvas class="diagram" id="canvas3" width="600" height="300">
+                <canvas class="diagram" id="canvas3">
                 </canvas>
 
             </div>
