Updated instructions.html and changed canvastest.html to generaator.html.

--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 
             <ul>
                 <li><a href="index.html">Avaleht</a></li>
-                <li><a href="canvastest.html">Generaator</a></li>
+                <li><a href="generaator.html">Generaator</a></li>
                 <li><a href="instructions.html">Kasutusjuhis</a></li>
                 <li><a href="about.html">Meist</a></li>
             </ul>
@@ -31,7 +31,7 @@
             <p>
                 Veebisait on valminud Tartu Ülikooli aine Sissejuhatus erialasse raames Andre Anijärve ja Kaarel Kangro paaristööna.
                 Allikatena on kasutatud A. W. F. Edwards'i raamatut "Cogwheels of the Mind: The Story of Venn Diagrams" ning Vikipeediat mõningate jooniste
-                jaoks.
+                jaoks. Lähtekood on üleval Github'is: <a href="https://github.com/krlkngro/Venn-Diagram-Page">https://github.com/krlkngro/Venn-Diagram-Page</a>.
             </p>
             <ul>
                 <li>Andre Anijärv: Kujundus, teksti- ja pildisisu.</li>
