--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
             <ul>
                 <li><a href="index.html">Avaleht</a></li>
-                <li><a href="canvastest.html">Generaator</a></li>
+                <li><a href="generaator.html">Generaator</a></li>
                 <li><a href="instructions.html">Kasutusjuhis</a></li>
                 <li><a href="about.html">Meist</a></li>
             </ul>
