Added placeholders for input fields.

--- a/generaator.html
+++ b/generaator.html
@@ -40,8 +40,8 @@
             </div>
 
             <div id="input">
-                <label for="equation"></label><input id="equation" type="text">
-                <label for="color"></label><input id="color" type="text">
+                <label for="equation"></label><input id="equation" type="text" placeholder="Hulgatehe:">
+                <label for="color"></label><input id="color" type="text" placeholder="Esiletõstetavad hulgad:">
                 <button onclick="draw()">Joonista</button>
         </div>
 
